# learn-python

./: .gitignore  pyproject.toml
pyg_configs/: iris_scatter.json
src/: binary_classification.ipynb  classification.ipynb  money.py  xunit.py
tests/: test_money.py  test_xunit.py
